Add origami pictures to project directory

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -6,6 +6,13 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        
+        <div class="nav">
+            <div class="left-links">
+                
+            </div>
+            <div class="right-links">
+
+            </div>
+        </div>
     </body>
 </html>
