Finish first three sections

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Landing Page</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <div class="nav">
@@ -21,35 +22,35 @@
         <div class="big-container-1">
             <div class="info">
                 <p class="header-small">What's BOFA?</p>
-                <p>Welcome to BOFA! Bruin Origami For All is a club that desires to promote and spread the art of origami. Our goal is to teach people how to fold both individual origami and collective group origami, to spread the love of origami to the UCLA campus and beyond, and to bring joy to people through origami by partnering with organizations in our local community.</p>
-                <button>Join BOFA</button>
+                <p class="secondary-text">Welcome to BOFA! Bruin Origami For All is a club that desires to promote and spread the art of origami. Our goal is to teach people how to fold both individual origami and collective group origami, to spread the love of origami to the UCLA campus and beyond, and to bring joy to people through origami by partnering with organizations in our local community.</p>
+                <button>JOIN BOFA</button>
             </div>
-            <img src="../images/bruin-origami.png" alt="Bruin Origami For All banner">
+            <img class="main-image" src="../images/bruin-origami.png" alt="Bruin Origami For All banner">
         </div>
         <div class="big-container-2">
-            <div class="header">Our Projects</div>
+            <div class="header">Our Projects.</div>
             <div class="container">
                 <div class="card">
-                    <img src="../images/fire-dragon-origami.jpg" alt="Origami fire dragon">
+                    <img class="info-img" src="../images/fire-dragon-origami.jpg" alt="Origami fire dragon">
                     <p>Origami fire dragon by Jo Nakashima, folded with printer paper</p>
                 </div>
                 <div class="card">
-                    <img src="../images/hydrangea-origami.jpg" alt="Origami hydrangea">
-                    <p>Origami quadruple hydrangea by Shuzo Fujimoto and adapted, folded with printer paper</p>
-                </div>
+                    <img class="info-img" src="../images/hydrangea-origami.jpg" alt="Origami hydrangea">
+                    <p>Origami quadruple hydrangea by Shuzo Fujimoto (adapted), folded with printer paper</p>
+                </div> 
                 <div class="card">
-                    <img src="../images/love-birds-origami.jpg" alt="Origami love birds">
+                    <img class="info-img" src="../images/love-birds-origami.jpg" alt="Origami love birds">
                     <p>Origami love birds by Francis Ow, folded with printer paper</p>
                 </div>
                 <div class="card">
-                    <img src="../images/spiral-tower-origami.jpg" alt="Origami spiral flower tower">
+                    <img class="info-img" src="../images/spiral-tower-origami.jpg" alt="Origami spiral flower tower">
                     <p>Origami flower tower by Chris Palmer, folded with printer paper</p>
                 </div>
             </div>
         </div>
         <div class="big-container-3">
             <div class="quote">
-                Our vision for this club is not only to help others learn how to fold and to fold alongside them, but to be part of something greater. BOFA members will actively invest into the community around them. Origami itself is beautiful, but it is even more magnificent when used to bring joy to other people. This could tangibly manifest through giving origami gifts, housing beautification, and the like. Stay tuned for more ways we can serve our community through origami!
+                <em>"We desire not only to help others learn how to fold and to fold alongside them, but to be part of something greater. BOFA members will actively invest into the community around them. Origami itself is beautiful, but it is even more magnificent when used to bring joy to other people."</em>
             </div>
             <div class="quoter">
                 Our Vision
