--- a/static/styles.css
+++ b/static/styles.css
@@ -1,17 +1,128 @@
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .nav {
     background-color: #1F2937;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+}
 
+.header-logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: #F9FAF8;
 }
 
 .big-container-1 {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap: 50px;
+}
 
+.info {
+    width: 300px;
+    flex: 1 0 auto;
+    flex-shrink: 0
+}
+
+.header-small {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 16px;
+}
+
+.secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-bottom: 16px;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    padding: 8px 24px;
+}
+
+.main-image {
+    width: 400px; 
+    flex: 1 3 auto;
 }
 
 .big-container-2 {
-
+    color: #E5E7EB;
+    height: 400px;
 }
 
-.big-container-3 {
+.header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    margin: 20px;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 30px
+}
+
+.card {
+    max-width: 200px;
+    text-align: center;
+    color: #1F2937;
+}
+
+.info-img {
+    border-radius: 75px;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    object-position: 100% 50%;
+    margin-bottom: 16px;
+}
+
+
+.big-container-3 {
+    background-color: #E5E7EB;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 100px;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    margin-bottom: 40px;
+}
+
+.quoter {
+    font-size: 24px;
+    color: #1F2937;
+}
+
+ul {
+    list-style: none;
+    font-size: 18px;
+    color: #E5E7EB;
+    display: flex;
+    gap: 8px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
