--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="big-container-2">
             <div class="header">Our Projects.</div>
-            <div class="container">
+            <div class="card-container">
                 <div class="card">
                     <img class="info-img" src="../images/fire-dragon-origami.jpg" alt="Origami fire dragon">
                     <p>Origami fire dragon by Jo Nakashima, folded with printer paper</p>
@@ -50,19 +50,17 @@
         </div>
         <div class="big-container-3">
             <div class="quote">
-                <em>"We desire not only to help others learn how to fold and to fold alongside them, but to be part of something greater. BOFA members will actively invest into the community around them. Origami itself is beautiful, but it is even more magnificent when used to bring joy to other people."</em>
+                <div class="quote-inception"><em>"We desire not only to help others learn how to fold and to fold alongside them, but to be part of something greater. BOFA members will actively invest into the community around them. Origami itself is beautiful, but it is even more magnificent when used to bring joy to other people."</em></div>
             </div>
             <div class="quoter">
                 Our Vision
             </div>
         </div>
-        <div class="big container-2">
-            <div class="container">
-                <div class="heading">
-                    Come on an Origami Adventure!
-                </div>
+        <div class="big-container-4">
+            <div class="action-container">
                 <div class="info">
-                    It's easy to join Bruin Origami For All! Go ahead an join us by clicking on the provided button to the right, 
+                    <p class="heading-small">Come on an Origami Adventure!</p>
+                    <p class="information">It's easy to join Bruin Origami For All! Go ahead an join us by clicking on the provided button to the right.</p>
                 </div>
                 <button>Join BOFA Now</button>
             </div>
